--- a/footers/01_Bootstrap_Simple_Footer/01_bootstrap_footer.html
+++ b/footers/01_Bootstrap_Simple_Footer/01_bootstrap_footer.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Footer Bootstrap Solution</title>
+  <link rel="stylesheet" type="text/css" href="01_bootstrap_footer.css">
 </head>
 <body>
   <main class="content">
