--- a/navigation/01_simple_top_navigation/01_simple_top_navigation..html
+++ b/navigation/01_simple_top_navigation/01_simple_top_navigation..html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 	<link rel="stylesheet" type="text/css" href="01_simple_top_navigation.css">
 	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 	<title>Simple Top Navigation</title>
