Added a Simple Blog Header

--- a/navigation/02_top_navigation/02_top_navigation.html
+++ b/navigation/02_top_navigation/02_top_navigation.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
 	<meta name="viewport" width="device-width">
+	<link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
 	<link rel="stylesheet" type="text/css" href="02_top_navigation.css">
 	<title>Floated - Fixed Top Navigation</title>
   </head>
