Added a simple sticky footer solution.

--- a/footers/01_Bootstrap_Simple_Footer/01_bootstrap_footer.html
+++ b/footers/01_Bootstrap_Simple_Footer/01_bootstrap_footer.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="description" content="Footer Bootstrap Solution">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Footer Bootstrap Solution</title>
-  <link rel="stylesheet" type="text/css" href="01_bootstrap_footer.css">
-</head>
-<body>
-  <main class="content">
-    <span>content</span>
-  </main>
-  <footer class="footer">
-    <span>footer</span>
-  </footer>
-</body>
+  <head>
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="01_bootstrap_footer.css">
+  </head>
+  <body>
+    <footer>
+	  <div class="wrapper">
+	    <small>&copy;2017 <strong>Awesome Company</strong>, All Rights Reserved</small>
+		<nav class="footer-nav">
+		  <a href="#">Back to Top</a>
+		  <a href="#">Terms of Use</a>
+		  <a href="#">Privacy</a>
+		</nav>
+	  </div>
+	</footer>
+  </body>
 </html>
