Revised the sticky footer

--- a/footers/02_sticky_footer/02_sticky_footer.html
+++ b/footers/02_sticky_footer/02_sticky_footer.html
@@ -6,15 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="02_sticky_footer.css">
   </head>
   <body>
-    <body>
 	  <div class="wrapper">
 	    <main class="content">
 		  <span>content</span>
 		</main>
 		<footer class="footer">
-		  <span>&lt;footer&gt;</span>
+		  <span>footer;</span>
 		</footer>
 	  </div>
-	</body>
   </body>
 </html>
