Added a footer and a wedding site

--- a/footers/02_sticky_footer/02_sticky_footer.html
+++ b/footers/02_sticky_footer/02_sticky_footer.html
@@ -6,13 +6,11 @@
 	<link rel="stylesheet" type="text/css" href="02_sticky_footer.css">
   </head>
   <body>
-	  <div class="wrapper">
-	    <main class="content">
-		  <span>content</span>
-		</main>
-		<footer class="footer">
-		  <span>footer;</span>
-		</footer>
-	  </div>
+    <main class="content">
+	  <span>content</span>
+	</main>
+	<footer class="footer">
+	  <span>footer</span>
+	</footer>
   </body>
 </html>
